# GeneDrop

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NewVersion.sdf  NewVersion.sln  README.md  flow.dia  requirements.md
.circleci/: config.yml
Debug/: GeneDropCommandLineFrontEnd.ilk
GeneDropBackEnd/: BreedEventNode.h  BreedNode.cpp  BreedNode.h  Breeder.cpp  Breeder.h  BreedingUnit.cpp  BreedingUnit.h  CMakeLists.txt  Chromosome.cpp  Chromosome.h  ConcreteBreedNode.cpp  ConcreteBreedNode.h  ConcreteIndividualNode.cpp  ConcreteIndividualNode.h  Cross.cpp  Cross.h  FounderNode.h  FounderSet.cpp  FounderSet.h  GeneDropBackEnd.vcxproj  GeneDropBackEnd.vcxproj.filters  Genotype.cpp  Genotype.h  IndividualNode.cpp  IndividualNode.h  IndividualReference.cpp  IndividualReference.h  IndividualSource .cpp  IndividualSource .h  LazyGenotypeFrequency.cpp  LazyGenotypeFrequency.h  Locus.cpp  Locus.h  Maybe.h  NewPedigree.cpp  NewPedigree.h  NewSimulationManager.cpp  NewSimulationManager.h  Organism.cpp  Organism.h  (+33 more)
GeneDropBackEnd/Debug/: vc120.idb
GeneDropBackEnd/Debug/GeneDropBackEnd.tlog/: CL.read.1.tlog  CL.write.1.tlog  GeneDropBackEnd.lastbuildstate  cl.command.1.tlog
GeneDropBackEnd/src/: Chromosome.cpp  Chromosome.h  Cross.cpp  Genotype.cpp  Genotype.h  Locus.cpp  Locus.h  Organism.cpp  Organism.h  OrganismSpecifier.cpp  OutputMaker.h  Pedigree.cpp  RNGController.cpp  SimulationManager.cpp  State.cpp  State.h  TimeHandler.h
GeneDropCommandLineFrontEnd/: CMakeLists.txt  CommandLineArg.cpp  CommandLineArg.h  CommandLineParser.cpp  CommandLineParser.h  GeneDropCommandLineFrontEnd.sdf  GeneDropCommandLineFrontEnd.vcxproj  GeneDropCommandLineFrontEnd.vcxproj.filters  Output(17-21-46@16-12-2014).csv  commandLineFrontEnd.cpp  founders.csv  loci.csv  pedigree.csv
GeneDropCommandLineFrontEnd/Debug/: vc120.idb
GeneDropCommandLineFrontEnd/Debug/GeneDrop.D3FCA2AC.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GeneDropCommandLineFrontEnd/src/: CommandLineArg.h  CommandLineParser.cpp  CommandLineParser.h  commandLineFrontEnd.cpp
GeneDropGraphicalFrontEnd/: CMakeLists.txt  FileChoiceWidget.cpp  GeneDropGraphicalFrontEnd.vcxproj  GeneDropGraphicalFrontEnd.vcxproj.filters  GeneDropPretty_automoc.cpp  GenerationChoiceWidget.cpp  MainWindow.cpp  MainWindow.h  MethodDispatcher.h  ProgramOptions.cpp  ProgramOptions.h  UserInterface.cpp  UserInterface.h  application.h  application_win.cc  geneDropPretty.cpp  graphicalFrontEnd.cpp  mainView.css  mainView.html  scripts.js  view.h
GeneDropGraphicalFrontEnd/src/: FileChoiceWidget.h  GenerationChoiceWidget.h  LICENSE-QT  MainWindow.h  OutputWindow.cpp  OutputWindow.h
GeneDropTests/: CMakeLists.txt  GeneDropTests.vcxproj  GeneDropTests.vcxproj.filters  LICENSE-CATCH  catch.hpp  tests.cpp
GeneDropTests/TestFiles/: backcrossDuplicatedNamesPedigree.csv  backcrossPedigree.csv  genotypeWithEmptyID.csv  singleBiallelicFounders.csv  singleBiallelicLoci.csv  singleBiallelicPedigree.csv
TestFiles/: singleBiallelicFounders.csv  singleBiallelicLoci.csv  singleBiallelicPedigree.csv
testLibrary/: ReadMe.txt  testLibrary.vcxproj
